--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,81 @@
 body {
-  background: papayawhip;
+  background: seashell;
+  color: white; 
+}
+
+.container-1{
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: 25%;
+  background-color: rgb(0, 0, 0);
+}
+
+.container-2{
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: 75%; 
+  background-color: rgb(234, 164, 24);
+  min-height: 50vh;
+}
+
+.a, .b, .c, .d, .e, .f {
+  border: solid 0.3em #006eff;
+  background-color: rgb(87, 167, 145);
+  padding: 1em;
+  flex-grow: 1;
+  font-size: 15px;
+  margin: 0.5em;
+}
+
+
+.a:hover, .b:hover, .c:hover, .d:hover, .e:hover, .f:hover{
+  color: rgb(1, 160, 251);
+  transition: 1s;
+  border: solid 0.1em rgb(255, 255, 255);
+  
+}
+
+.a{
+  flex-basis: 25%;
+}
+.b{
+  flex-basis: 80%;
+  height: 50vh;
+}
+.c, .d, .e {
+  flex-basis: 25%;
+}
+
+h1, h2, p{
+  text-align: center;
+  align-content: center;
+  font-family: Verdana 'sans-serif';
+  font-size: 45px;
+}
+
+p{
+  font-size: 25px;
+  font-weight: bold;
+  font-family: Verdana 'sans-serif';
+  
+}
+
+/* Mobile Version */
+@media (max-width: 600px){
+  .container-1 {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .a{
+    width: 100%;
+   
+  }
+  .b {
+   flex-basis: 80%; 
+  }
+  .container-2 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 100%;
+  }
 }
