--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -1,3 +1,69 @@
 body {
-  background: blanchedalmond;
+  background: seashell;
+}
+
+.container {
+  display: flex;
+  flex-direction: row; 
+  flex-wrap:wrap;
+  background-color: rgb(0, 0, 0);
+
+ 
+}
+.a, .b, .c {
+  border: solid 0.1em rgb(0, 136, 255);
+  background-color: rgb(116, 189, 168);
+  padding: 1em;
+  flex-grow: 1;
+  font-size: 20px;
+  font-weight: 400;
+  cursor: pointer; 
+  margin: 0.5em;
+
+}
+.a{
+  flex-grow: 1;
+  flex-basis: 100%;
+  height: 25vh; 
+}
+
+.b{
+  flex-grow: 1;
+  flex-basis: 100%;
+  height: 50vh;
+}
+.c {
+  flex-grow: 1;
+  flex-basis: 100%;
+  height: 25vh;
+    
+}
+h1, h2, p{
+  text-align: center;
+  align-content: center;
+  font-family: Verdana 'sans-serif';
+  font-size: 45px;
+}
+
+p{
+  font-size: 35px;
+  font-weight: bold;
+  font-family: Verdana 'sans-serif';
+  
+}
+
+/* Mobile Version */
+@media (max-width: 600px){
+  .container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .a{
+    width: 100%;
+    max-width: 100vw;
+  }
+  .b {
+    flex-basis: 100%;
+  }
+
 }
